--- a/messaging-app-ui/package.json
+++ b/messaging-app-ui/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.1",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
+    "socket.io-redis": "^6.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redis": "^2.8.28"
   }
 }
