--- a/messaging-app-ui/package.json
+++ b/messaging-app-ui/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
