--- a/messaging-app-ui/package.json
+++ b/messaging-app-ui/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "socket.io-redis": "^6.0.1",
