--- a/messaging-app-backend/package.json
+++ b/messaging-app-backend/package.json
@@ -11,6 +11,7 @@
 		"dotenv": "^8.2.0",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
+		"node-fetch": "^2.6.1",
 		"socket.io": "^3.0.4",
 		"socket.io-redis": "^6.0.1"
 	},
