Minor code fixes and gitignore additions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-messaging-app-backend/node_modules/
+messaging-app-ui/.eslintcache
 messaging-app-ui/node_modules/
 messaging-app-backend/.env
+messaging-app-backend/node_modules/
