--- a/messaging-app-ui/package.json
+++ b/messaging-app-ui/package.json
@@ -13,6 +13,8 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "socket.io-redis": "^6.0.1",
