--- a/messaging-app-ui/package.json
+++ b/messaging-app-ui/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
+    "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
